# mlops-digester

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  invoke.yaml  mlops-digester.code-workspace  pyproject.toml
.github/workflows/: publish.yml
diagrams/: architecture.excalidraw  modules.excalidraw  pydantic-ai.excalidraw  workflows.excalidraw
src/mlops_digester/: __init__.py  __main__.py  agents.py  clients.py  depends.py  interfaces.py  models.py  results.py  scripts.py  services.py  settings.py  tasks.py  tools.py
tasks/: __init__.py  checks.py  cleans.py  runs.py
